--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: regress
-Version: 1.3-17
+Version: 1.3-18
 Date: 2020-06-11
 Title: Gaussian Linear Models with Linear Covariance Structure
 Author: David Clifford and Peter McCullagh. Additional contributions by
-        HJ Auinger.
-Maintainer: David Clifford <david.clifford+CRAN@gmail.com>
+        HJ Auinger and Karl W Broman.
+Maintainer: Karl W Broman <broman@wisc.edu>
 Description: Functions to fit Gaussian linear model by maximising the
         residual log likelihood where the covariance structure can be
         written as a linear combination of known matrices.  Can be used
