NAMESPACE: import just selected functions from stats

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,5 @@
 S3method(print,regress)
 S3method(summary,regress)
 export(regress,BLUP)
-import(stats)
+importFrom("stats", "as.formula", "model.frame", "model.matrix",
+           "model.response", "na.pass", "nobs", "optimize", "var")
