Fix likely bug that maybe rarely occurs; nobs -> n
- there's a line with nobs but that doesn't seem to
  be defined; seems like it should be n, the number
  of observations

- it wasn't caught by R CMD check since stats::nobs
  is a function and stats was imported in the NAMESPACE
  file

- I just changed from importing all of stats to importing
  select functions; Prof Ripley had done that in 2017
  and declared the package orphaned. Seems like nobs is
  not actually used, so could delete that from the importFrom
  statement.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,4 +2,4 @@ S3method(print,regress)
 S3method(summary,regress)
 export(regress,BLUP)
 importFrom("stats", "as.formula", "model.frame", "model.matrix",
-           "model.response", "na.pass", "nobs", "optimize", "var")
+           "model.response", "na.pass", "optimize", "var")
