--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,12 @@ Package: regress
 Version: 1.3-20
 Date: 2020-06-12
 Title: Gaussian Linear Models with Linear Covariance Structure
-Author: David Clifford and Peter McCullagh. Additional contributions by
-        HJ Auinger and Karl W Broman.
+Authors@R: c(person("David", "Clifford", role=c("aut", "cre")),
+             person("Peter", "McCullagh", role=c("aut", "cre")),
+             person("HJ", "Auinger", role="ctb"),
+             person("Karl W", "Broman", role="ctb"))
+Author: David Clifford [aut, cre], Peter McCullagh [aut, cre],
+        HJ Auinger [ctb], Karl W Broman [ctb]
 Maintainer: Karl W Broman <broman@wisc.edu>
 Description: Functions to fit Gaussian linear model by maximising the
         residual log likelihood where the covariance structure can be
