--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,12 +2,15 @@ Package: regress
 Version: 1.3-21
 Date: 2020-06-17
 Title: Gaussian Linear Models with Linear Covariance Structure
-Authors@R: c(person("David", "Clifford", role=c("aut", "cre")),
-             person("Peter", "McCullagh", role=c("aut", "cre")),
+Authors@R: c(person("David", "Clifford", role="aut"),
+             person("Peter", "McCullagh", role="aut"),
              person("HJ", "Auinger", role="ctb"),
-             person("Karl W", "Broman", role="ctb"))
-Author: David Clifford [aut, cre], Peter McCullagh [aut, cre],
-        HJ Auinger [ctb], Karl W Broman [ctb]
+             person("Karl W", "Broman", role=c("ctb","cre"),
+                    email="broman@wisc.edu",
+                    comment=c(ORCID = "0000-0002-4914-6671")))
+Author: David Clifford [aut], Peter McCullagh [aut],
+        HJ Auinger [ctb], Karl W Broman [ctb, cre]
+        (<https://orcid.org/0000-0002-4914-6671>)
 Maintainer: Karl W Broman <broman@wisc.edu>
 Description: Functions to fit Gaussian linear model by maximising the
         residual log likelihood where the covariance structure can be
